# learning-rust

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  package-lock.json  package.json  project-words.txt
.github/: copilot-instructions.md
.github/workflows/: rust.yml
src/01_newtype_pattern/: Cargo.toml  README.md
src/02_enum_methods/: Cargo.toml  README.md
src/03_lifetime_order/: Cargo.toml  README.md
src/04_generic_impl/: Cargo.toml  README.md
src/05_non_primitive_constants/: Cargo.toml  README.md
src/06_composite_impl/: Cargo.toml  README.md
src/07_generic_traits/: Cargo.toml  README.md
src/07_generic_traits/src/: main.rs
